--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
  <h1>welcome to our application</h1>
 
    
-      <h1>This application for testing</h1>
+      <h1>This application for TEST</h1>
     <p>This content is being served by an Nginx container</p>
 
 </body>
