--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
  <h1>welcome to our application</h1>
 
    
-      <h1>Tstage pfe</h1>
+      <h1>PFE TEST PROJECT</h1>
     <p>This content is being served by an Nginx container</p>
 
 </body>
